Fix compiler errors

--- a/src/glc/CMakeLists.txt
+++ b/src/glc/CMakeLists.txt
@@ -113,7 +113,7 @@ IF (LZJB)
 ENDIF (LZJB)
 
 SET(GLC_CORE_SRC "${COMMON_HDR};${CORE_HDR};${COMMON_SRC};${CORE_SRC};${LZO_SRC};${QUICKLZ_SRC};${LZJB_SRC}")
-SET(GLC_CORE_LIB m ${PACKETSTREAM_LIBRARY})
+SET(GLC_CORE_LIB rt ${PACKETSTREAM_LIBRARY})
 ADD_GLC_LIBRARY(glc-core "${GLC_CORE_SRC}" "${GLC_CORE_LIB}")
 
 SET(GLC_CAPTURE_SRC "${COMMON_HDR};${CAPTURE_HDR};${CAPTURE_SRC}")
