--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-PROJECT("glc")
+PROJECT("glc" "C")
 
 SET(GLC_SOVER 0)
-SET(GLC_VER 0.6.0)
+SET(GLC_VER 0.6.1)
 
 IF (NOT CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE "Release")
