--- a/src/glc/common/version.h.in
+++ b/src/glc/common/version.h.in
@@ -1,6 +1,6 @@
 #ifndef _VERSION_H
 #define _VERSION_H
 
-#define GLC_VERSION "@GLC_VERSION@"
+#define GLC_VERSION "@GLCS_VERSION@"
 
 #endif /* _VERSION_H */
