--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ ENDIF (PACKETSTREAM_FOUND)
 
 
 IF (UNIX)
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -Wall")
     ADD_DEFINITIONS("-D_GNU_SOURCE")
     ADD_DEFINITIONS("-D_FILE_OFFSET_BITS=64")
 ENDIF (UNIX)
