Account for fps fractional part in the ts.
Signed-off-by: Olivier Langlois <olivier@trillion01.com>

--- a/src/glc/CMakeLists.txt
+++ b/src/glc/CMakeLists.txt
@@ -48,9 +48,9 @@ ENDIF (LZJB)
 # This is where the library targets are defined.
 SET(COMMON_SRC "common/core.h" "common/glc.h" "common/log.h"
     "common/optimization.h" "common/signal.h" "common/state.h"
-    "common/thread.h" "common/util.h" "common/version.h" "common/core.c"
-    "common/log.c" "common/signal.c" "common/state.c" "common/thread.c"
-    "common/util.c")
+    "common/thread.h" "common/util.h" "common/version.h" "common/rational.h"
+    "common/core.c" "common/log.c" "common/signal.c" "common/state.c"
+    "common/thread.c" "common/util.c" "common/rational.c")
 
 # GLCS Core library.
 ADD_LIBRARY("glc-core" SHARED ${COMMON_SRC}
