Robustify CMake files for pthreads
It has been reported that on some platforms pthread lib was missing during
linking.

Signed-off-by: Olivier Langlois <olivier@trillion01.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT("glcs" "C")
 
 SET(GLCS_SOVER 0)
-SET(GLCS_VER 0.6.1)
+SET(GLCS_VER 0.6.3)
+FIND_PACKAGE(Threads REQUIRED)
 
 IF (NOT CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE "Release")
